byyl-project-gui/tiny_grammar.txt
program -> stmt-sequence
stmt-sequence -> stmt-sequence branch statement | statement
statement -> if-stmt | repeat-stmt | assign-stmt | read-stmt | write-stmt
if-stmt -> if exp then stmt-sequence branch end | if exp then stmt-sequence branch else stmt-sequence branch end
repeat-stmt -> repeat stmt-sequence branch until exp
assign-stmt -> ID assign-op exp
read-stmt -> read ID
write-stmt -> write exp
exp -> simple-exp comparison-op simple-exp | simple-exp
comparison-op -> lt | gt | eq | le | uneq | ge
simple-exp -> simple-exp addop term | term
addop -> add | minus
term -> term mulop factor | factor
mulop -> mul | div | mod | pow
factor -> lparen exp rparen | num | ID
